testdata/parser/negative/7.pdl
#version 100

import std.reo;

// shadowing formal parameter
composite main(in a, out b) {
	channel c -> a;
	new sync(a, b);
}
